Peter's fix for text wrapping

--- a/styles.css
+++ b/styles.css
@@ -16,9 +16,9 @@ h1{
 }
 
 table{
-	width:  1000px;
+	width:  1100px;
 	margin: 30px auto;
-	/* table-layout: fixed; for text wrapping */
+	table-layout: auto;
 }
 
 table th{
@@ -33,12 +33,6 @@ table td{
 	width: 100%;
 	text-align: center;
 	/* background-color: #fff; */
-}
-
-#td-wrap{ /* for text wrapping */
-	text-overflow: ellipsis;
-	white-space: nowrap;
-  	overflow: hidden; 
 }
 
 tr:nth-child(even) {
@@ -66,3 +60,14 @@ table img{
 	padding: 8px 16px;
 	border: 1px solid #ccc;
   }
+
+.td-wrap{ /* for text wrapping */
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden; 
+	max-width:300px;
+}
+
+.td-wrap:hover{
+    white-space: pre-wrap;
+}
